[gd_scene load_steps=15 format=3 uid="uid://c51g5pwiyurqe"]

[ext_resource type="Script" path="res://system/science/electronics_lab/component/frequency_generator/frequency_generator.gd" id="1_4vnsp"]
[ext_resource type="PackedScene" uid="uid://bqh3x67i0so4s" path="res://system/science/electronics_lab/component/terminal/terminal_output.tscn" id="2_b7sot"]
[ext_resource type="Script" path="res://system/science/electronics_lab/signal/sine_wave.gd" id="2_gd3eg"]
[ext_resource type="Material" uid="uid://2x4s2ffmisjh" path="res://materials/toon/flat/gray/gray.tres" id="3_5vmjf"]
[ext_resource type="PackedScene" uid="uid://bpjyfcwj2hhpv" path="res://io/button/button_round.tscn" id="4_q1fjy"]
[ext_resource type="PackedScene" uid="uid://c30oo4fukyltu" path="res://io/button/button_square.tscn" id="6_w7v7t"]
[ext_resource type="PackedScene" uid="uid://drhj0wk517w1w" path="res://handle.tscn" id="7_wm6i1"]

[sub_resource type="Resource" id="Resource_1qt27"]
script = ExtResource("2_gd3eg")
amplitude = 1.0
frequency = 440.0
speed = 0.0
offset = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_rf33g"]
size = Vector3(0.25, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_gabav"]
size = Vector3(0.25, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vwubg"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_higr1"]
material = SubResource("StandardMaterial3D_vwubg")
size = Vector2(0.04, 0.04)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2mxsh"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_rglxu"]
material = SubResource("StandardMaterial3D_2mxsh")
size = Vector2(0.11, 0.04)

[node name="FrequencyGenerator" type="RigidBody3D" node_paths=PackedStringArray("active_property_buttons", "outputs")]
script = ExtResource("1_4vnsp")
waveform = SubResource("Resource_1qt27")
active_property_buttons = [NodePath("Frequency/Button"), NodePath("Voltage/Button")]
outputs = [NodePath("TerminalOutput")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_rf33g")

[node name="Box" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
material_override = ExtResource("3_5vmjf")
mesh = SubResource("BoxMesh_gabav")

[node name="Frequency" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.17, 0.105)

[node name="Label" type="Node3D" parent="Frequency"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.063, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frequency/Label"]
mesh = SubResource("QuadMesh_higr1")
skeleton = NodePath("../../..")

[node name="Label3D" type="Label3D" parent="Frequency/Label"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
pixel_size = 0.001
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "Ï‰"
outline_size = 0

[node name="Display" type="Node3D" parent="Frequency"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frequency/Display"]
mesh = SubResource("QuadMesh_rglxu")
skeleton = NodePath("../../..")

[node name="Label3D" type="Label3D" parent="Frequency/Display"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
pixel_size = 0.001
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "440.00"
outline_size = 0

[node name="Button" parent="Frequency" instance=ExtResource("4_q1fjy")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0997829, 0, -2.51234e-05)

[node name="Voltage" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0.105)

[node name="Label" type="Node3D" parent="Voltage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.063, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Voltage/Label"]
mesh = SubResource("QuadMesh_higr1")
skeleton = NodePath("../../..")

[node name="Label3D" type="Label3D" parent="Voltage/Label"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
pixel_size = 0.001
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "V"
outline_size = 0

[node name="Display" type="Node3D" parent="Voltage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Voltage/Display"]
mesh = SubResource("QuadMesh_rglxu")
skeleton = NodePath("../../..")

[node name="Label3D" type="Label3D" parent="Voltage/Display"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
pixel_size = 0.001
modulate = Color(0, 1, 0, 1)
outline_modulate = Color(0, 0, 0, 0)
text = "1.0"
outline_size = 0

[node name="Button" parent="Voltage" instance=ExtResource("4_q1fjy")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.1, 0, 0)

[node name="TerminalOutput" parent="." instance=ExtResource("2_b7sot")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0799656, 0.0201981, 0.0998753)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.015, 0.06, 0.1)

[node name="HundredUp" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, 0, -0.015)
light_on_click = true

[node name="HundredDown" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, 0, 0.015)
light_on_click = true

[node name="TenUp" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.015)
light_on_click = true

[node name="TenDown" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.015)
light_on_click = true

[node name="OneUp" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, 0, -0.015)
light_on_click = true

[node name="OneDown" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, 0, 0.015)
light_on_click = true

[node name="TenthUp" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06, 0, -0.015)
light_on_click = true

[node name="TenthDown2" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06, 0, 0.015)
light_on_click = true

[node name="HundrethUp" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.09, 0, 0.015)
light_on_click = true

[node name="HundrethDown" parent="Node3D" instance=ExtResource("6_w7v7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.09, 0, -0.015)
light_on_click = true

[node name="HandleL" parent="." instance=ExtResource("7_wm6i1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.1, 0.13)

[node name="HandleR" parent="." instance=ExtResource("7_wm6i1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.1, 0.13)

[connection signal="pressed" from="Frequency/Button" to="." method="set_active_property" binds= [0]]
[connection signal="pressed" from="Voltage/Button" to="." method="set_active_property" binds= [1]]
[connection signal="pressed" from="Node3D/HundredUp" to="." method="add_value_to_active_property" binds= [100]]
[connection signal="pressed" from="Node3D/HundredDown" to="." method="add_value_to_active_property" binds= [-100]]
[connection signal="pressed" from="Node3D/TenUp" to="." method="add_value_to_active_property" binds= [10]]
[connection signal="pressed" from="Node3D/TenDown" to="." method="add_value_to_active_property" binds= [-10]]
[connection signal="pressed" from="Node3D/OneUp" to="." method="add_value_to_active_property" binds= [1]]
[connection signal="pressed" from="Node3D/OneDown" to="." method="add_value_to_active_property" binds= [-1]]
[connection signal="pressed" from="Node3D/TenthUp" to="." method="add_value_to_active_property" binds= [0.1]]
[connection signal="pressed" from="Node3D/TenthDown2" to="." method="add_value_to_active_property" binds= [-0.1]]
[connection signal="pressed" from="Node3D/HundrethUp" to="." method="add_value_to_active_property" binds= [-0.01]]
[connection signal="pressed" from="Node3D/HundrethDown" to="." method="add_value_to_active_property" binds= [-0.01]]
